<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="choose_dict_title">请选择要使用的词典</string>
    <string name="choose_dict_content">请将StarDict（星际词典）必要的3个文件[.dict或.dz]、[.idx]、[.ifo]放在SD卡根目录的zdict目录下以便导入，否则无法使用此软件</string>
    
    <string name="app_name">大壮词典</string>
    
    <!-- 提示信息 -->
    <string name="edit_hint">请输入单词</string>
    <string name="search_contentDescription">搜索</string>
    <string name="tts_contentDescription">朗读</string>
    
    <!-- 菜单标题 -->
    <string name="menu_title_change_dict">切换词典</string>
    <string name="menu_title_about">关于</string>
    <string name="menu_title_exit">退出</string>
    
    <!-- 更新相关 -->
    <string name="update_file">http://zhuang-dict.googlecode.com/files/zhuang_dict_update.xml</string>
    <string name="confirm_update_title">已经发现有最新版本，请问是否需要升级？</string>
    <string name="confirm_update_yes">确定</string>
    <string name="confirm_update_no">取消</string>
    <string name="update_title">正在升级，请稍候</string>
    <string name="update_cannot">没有存储卡或者存储卡容量不够，请稍后重试</string>
    <string name="update_false">下载升级文件失败，请稍后重试</string>
</resources>
