<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<RelativeLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	>
		<ImageButton
			android:id="@+id/ts"
            android:contentDescription="@string/tts_contentDescription"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:layout_alignParentRight="true" 
		    android:src="@android:drawable/ic_btn_speak_now"
		/>
		<ImageButton
			android:id="@+id/search"
			android:contentDescription="@string/search_contentDescription"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_toLeftOf="@id/ts"
		    android:src="@android:drawable/ic_search_category_default"
		/>
		<AutoCompleteTextView
			android:id="@+id/edit"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:focusable="true"
		    android:singleLine="true"
		    android:layout_toLeftOf="@id/search"
		    android:hint="@string/edit_hint"
		/>
	</RelativeLayout>
	<WebView
		android:id="@+id/result"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
	/>
</LinearLayout>